--- a/web/index.html
+++ b/web/index.html
@@ -49,24 +49,24 @@
 
           <div class="row col-lg-12" style="margin-top: 20px">
                <div class="col-xs-10">
-                   <input type="text" class="form-control add-todo" placeholder="SSO" id ="sso" style="margin-left:-15px;" >
+                   <input type="text" class="form-control add-todo" placeholder="Add SSO" id ="sso" style="margin-left:-15px;" >
                </div>
           </div>
           <div class="row col-lg-12" style="margin-top: 20px">
                <div class="col-xs-10">
-                   <input type="text" class="form-control add-todo" placeholder="Project ID" id ="project" style="margin-left:-15px;" >
+                   <input type="text" class="form-control add-todo" placeholder="Add Project ID" id ="project" style="margin-left:-15px;" >
                </div>
           </div>
           <br >
           <div class="row col-lg-12" style="margin-top: 20px">
                <div class="col-xs-10">
-                   <input type="text" class="form-control add-todo" placeholder="work description" id ="desc" style="margin-left:-15px;" >
+                   <input type="text" class="form-control add-todo" placeholder="Add Work description" id ="desc" style="margin-left:-15px;" >
                </div>
           </div>
           <br/>
           <div class="row col-lg-12" style="margin-top: 20px">
                <div class="col-xs-10">
-                   <input type="text" class="form-control add-todo" placeholder="Hours" id ="hour" style="margin-left:-15px;" >
+                   <input type="text" class="form-control add-todo" placeholder="Add Hours" id ="hour" style="margin-left:-15px;" >
                </div>
           </div>
           <br/>
